2010-10-14  Daniel Bates  <dbates@rim.com>

Reviewed by Darin Adler.

        Only draw focus ring in RenderInline and RenderImage if the theme
        is not able to draw a focus ring
        https://bugs.webkit.org/show_bug.cgi?id=47632

        Fixes an issue where RenderInline::paintOutline() and RenderImage::paintFocusRings()
        would draw a focus ring regardless of whether the port-specific theme is able to
        draw a focus ring. Instead, these methods should only draw a focus ring if the
        theme is unable to draw a focus ring.

        Also, extracted common focus ring drawing code from RenderObject::paintOutline()
        and RenderInline::paintOutline() into RenderObject::paintFocusRing().

        Tests: fast/forms/textfield-focus-ring.html
               fast/images/imagemap-focus-ring.html
               fast/inline/inline-focus-ring.html

        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::paintFocusRings): Modified to only draw a focus ring if the
        the theme does not draw one.
        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::paintOutline): Modified to call RenderObject::paintFocusRing().
        * rendering/RenderObject.cpp:
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::paintFocusRing): Added.
        (WebCore::RenderObject::paintOutline): Modified to call RenderObject::paintFocusRing().
        * rendering/RenderObject.h:
2010-10-14  Daniel Bates  <dbates@rim.com>

        Reviewed by Darin Adler.

        Only draw focus ring in RenderInline and RenderImage if the theme
        is not able to draw a focus ring
        https://bugs.webkit.org/show_bug.cgi?id=47632

        Pixel tests to ensure that we don't regress focus ring drawing for RenderObject
        (fast/forms/textfield-focus-ring.html), RenderImage (fast/images/imagemap-focus-ring.html)
        and RenderInline (fast/inline/inline-focus-ring.html) on ports that support focus
        ring drawing.

        * fast/forms/textfield-focus-ring.html: Added.
        * fast/images/imagemap-focus-ring.html: Added.
        * fast/inline/inline-focus-ring.html: Added.
        * platform/mac/fast/forms/textfield-focus-ring-expected.checksum: Added.
        * platform/mac/fast/forms/textfield-focus-ring-expected.png: Added.
        * platform/mac/fast/forms/textfield-focus-ring-expected.txt: Added.
        * platform/mac/fast/images/imagemap-focus-ring-expected.checksum: Added.
        * platform/mac/fast/images/imagemap-focus-ring-expected.png: Added.
        * platform/mac/fast/images/imagemap-focus-ring-expected.txt: Added.
        * platform/mac/fast/inline/inline-focus-ring-expected.checksum: Added.
        * platform/mac/fast/inline/inline-focus-ring-expected.png: Added.
        * platform/mac/fast/inline/inline-focus-ring-expected.txt: Added.


Canonical link: https://commits.webkit.org/60353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69766 268f45cc-cd09-0410-ab3c-d52691b4dbfc